syntax = "proto3";

//Important to be always same in every environment
package todo;

import "google/protobuf/empty.proto";

message Empty {}

message StringRequest {
  string input = 1;
}

message StringResponse {
  string output = 1;
}

message TodoArray {
  repeated CustomTodo todos = 1;
}

message CustomTodo {
  string id = 1;
  string name = 2;
  string description = 3;
  bool done = 4;
}

service TodoService {
  rpc FindAll(google.protobuf.Empty) returns(TodoArray) {}
  rpc CreateTodo(CustomTodo) returns(StringResponse) {}
  rpc ReadTodo(StringRequest) returns(CustomTodo) {}
  rpc UpdateTodo(CustomTodo) returns(StringResponse) {}
  rpc DeleteTodo(StringRequest) returns(StringResponse) {}
}